# apex-power-ops-platform

./: .env.dev.template  .gitignore  .gitleaks.toml  .vercelignore  AGENTS.md  API formatting for Column Creation.md  ARCHIVE_NOTICE.md  CLAUDE.md  CONNECTIVITY_LIMITATIONS_SUMMARY.md  COORDINATED_TASK_LIST.md  D365_Project_Operations_Integration_Analysis.md  DOCUMENTATION_TONE_ADJUSTMENT.md  I'm working on RESA Power Project T.txt  MASTER_SCHEMA.md  My Questions _ Decisions Needed.md  PROJECT_CONTEXT.json  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  README_OLD_ENTERPRISE.md  REPOSITORY_CLEANUP_SUMMARY.md  REPOSITORY_TRANSITION_CHECKLIST.md  RESA-Dev-MCP-Access.txt  RESA_Power_Project_MASTER_REFERENCE.md  ROOT_FOLDER_CLEANUP_PLAN.md  SUPABASE_REPORT_WORKFLOW.md  The 401 Unauthorized error typicall.txt  WORKSPACE_DESIGN.md  WORKSPACE_PROTOCOL.md  WORKSPACE_SYSTEM.md  _DATAVERSE_IMPORT_20251130_122903.json  analyze_pdf.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apex-power-ops-platform/apps/control-plane-api/: .gitignore  DEPLOYMENT_VALIDATION.md  PUBLIC-APPARATUS-ROUTE-PROMOTION-CHECKLIST-2026-04-21.md  README.md  config.py  pyproject.toml  pytest.ini
apex-power-ops-platform/apps/mutation-seam/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_VALIDATION.md  FILES_MANIFEST.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  validate.py
apps/mutation-seam/: DEPLOYMENT.md  DEPLOYMENT_VALIDATION.md  QUICKSTART.md  README.md  pyproject.toml  render.yaml  requirements.txt  run_persisted_validation.py  run_schedule_bootstrap.py  test_store.py  validate.py
apps/mutation-seam/app/: config.py  contract_support_response_fixtures.py  customer_completion_persistence.py  durable_field_record_persistence.py  financial_handoff_persistence.py  main.py  pm_lane_seed.py  pm_workfront_read_model.py  production_tracking_persistence.py  project_import_admission_plan.py  project_import_approval_contract.py  project_import_approval_persistence.py  project_import_approval_storage_plan.py  project_import_candidate.py  project_import_contract_support_models.py  project_import_contract_support_persistence.py  project_import_persistence.py  project_import_snapshot.py  project_import_task_plan_persistence.py  project_seed_sources.py  project_tracker_sources.py  seed_workbooks.py  temp_power_actuals_capture_review_persistence.py  temp_power_customer_delivery_event_persistence.py  temp_power_customer_delivery_proof_review_persistence.py  temp_power_customer_preview_review_persistence.py
apps/mutation-seam/migrations/: 001_schedule_schema.sql  003_pm_import_candidate_approvals.sql  004_pm_lane_281_durable_field_records.sql  005_pm_lane_282_production_tracking_records.sql  006_pm_lane_283_customer_completion_records.sql  007_pm_lane_284_financial_handoff_records.sql  008_pm_lane_304_actuals_capture_reviews.sql  009_pm_lane_315_customer_preview_reviews.sql  010_pm_lane_329_customer_delivery_proof_reviews.sql  011_pm_lane_347_customer_delivery_events.sql  012_pm_lane_411_revision_c_role_contract_grants.md  013_pm_lane_411_financial_tables.sql  014_pm_lane_411_revision_c_role_contract_grants.sql  015_seam_scopes_addition_and_fk_retarget.sql  016_seam_apparatus_scope_id_and_operational_grants.sql
apps/mutation-seam/scripts/: export_pm_import_candidate_snapshot.py  preview_pm_import_candidate.py  preview_pm_planning_sources.py  run_temp_power_actuals_capture_review_local_proof.py  run_temp_power_customer_preview_review_local_proof.py  smoke_deployed_mutation_seam.py
apps/mutation-seam/tests/: conftest.py  test_customer_completion_persistence.py  test_durable_field_record_persistence.py  test_envelope_validation.py  test_financial_handoff_persistence.py  test_fixture_contract_020f.py  test_golden_fixture_020h.py  test_lane_502_temp_power_scope_backfill.py  test_pipeline_integration.py  test_pm_issue_disposition.py  test_pm_lane_seed.py  test_pm_workfront_read_model.py  test_production_tracking_persistence.py  test_project_import_admission_plan.py  test_project_import_approval_contract.py  test_project_import_approval_persistence.py  test_project_import_approval_storage_plan.py  test_project_import_candidate.py  test_project_import_candidate_snapshot_exporter.py  test_project_import_contract_support.py  test_project_import_persistence.py  test_project_import_snapshot_loader.py  test_project_import_task_plan_persistence.py  test_project_seed_sources.py  (+7 more)
(+6127 files in other folders)
