[project]
name = "apex-power-ops-platform"
version = "0.1.0"
description = "Bootstrap Python workspace metadata for the Apex Power Ops platform monorepo"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"